# crusader

./: .dockerignore  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CLI.md  COMMANDLINE.md  Cargo.toml  README.md  RESULTS.md  UNDERSTANDING.md  build.ps1
.github/workflows/: ci.yml  release.md  release.yml
android/: .gitignore  Cargo.toml  debugInstall.ps1
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/zoxc/crusader/: MainActivity.java
android/app/src/main/res/values/: colors.xml  themes.xml
android/src/: lib.rs
crusader/: Cargo.toml
crusader-gui/: Cargo.toml
crusader-gui/src/: main.rs
crusader-lib/src/: lib.rs  serve.rs  test.rs
crusader/src/: main.rs
data/: v0.crr  v1.crr  v2.crr
docker/: README.md  remote-static.Dockerfile  server-static.Dockerfile
docs/: CLI.md  LOCAL_TESTS.md  RESULTS.md  TROUBLESHOOTING.md
gui/: Cargo.toml
gui/src/: lib.rs  main.rs
media/: Crusader Screen Shots.md  batch_add_border.sh
src/: Cargo.toml
src/crusader/: Cargo.toml
src/crusader-gui/: Cargo.toml
src/crusader-gui-lib/: Cargo.toml
src/crusader-gui-lib/src/: client.rs  lib.rs
src/crusader-gui/src/: main.rs
src/crusader-lib/: Cargo.toml  build.rs
src/crusader-lib/src/: common.rs  discovery.rs  file_format.rs  latency.rs  lib.rs  peer.rs  plot.rs  protocol.rs  remote.html  remote.rs  serve.rs  test.rs
src/crusader/src/: main.rs
tool/: Cargo.toml
tool/src/: main.rs
