[package]
name = "crusader-android"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
eframe = { git = "https://github.com/Zoxc/egui.git", branch = "crusader", features = [ "wgpu" ] }
crusader-gui-lib = { path = "../src/crusader-gui-lib" }
crusader-lib = { path = "../src/crusader-lib" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { git = "https://github.com/Zoxc/android-activity", branch = "crusader", features = [ "game-activity" ] }

[patch.crates-io]
winit = { git = "https://github.com/Zoxc/winit", branch = "crusader" }

[lib]
name="main"
crate_type=["cdylib"]
