[package]
name = "crusader-android"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
eframe = { version = "0.28.1", features = ["wgpu"] }
crusader-gui-lib = { path = "../src/crusader-gui-lib" }
crusader-lib = { path = "../src/crusader-lib" }
winit = "0.29.15"
jni = "0.19.0"
ndk-context = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { version = "0.5", features = ["game-activity"] }

[patch.crates-io]
winit = { git = "https://github.com/Zoxc/winit", branch = "crusader2" }
egui = { git = "https://github.com/Zoxc/egui", branch = "crusader2" }
epaint = { git = "https://github.com/Zoxc/egui", branch = "crusader2" }
emath = { git = "https://github.com/Zoxc/egui", branch = "crusader2" }
egui_plot = { git = "https://github.com/Zoxc/egui_plot", branch = "crusader" }

[lib]
name = "main"
crate-type = ["cdylib"]
