[workspace]
members = ["crusader", "crusader-lib", "crusader-gui-lib", "crusader-gui"]
resolver = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"

[profile.speed]
opt-level = 3
codegen-units = 1
inherits = "release"
lto = "fat"

[profile.size]
inherits = "speed"
opt-level = "s"
