[package]
name = "crusader-gui-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
crusader-lib = { path = "../crusader-lib" }
tokio = { version = "1.18.2", features = ["full"] }
eframe = "0.28.1"
egui_plot = "0.28.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.10.0", default-features = false, features = [
    "xdg-portal",
] }
