[package]
name = "crusader-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crusader-lib = { path = "../crusader-lib" }
crusader-gui-lib = { path = "../crusader-gui-lib" }
eframe = { git = "https://github.com/Zoxc/egui.git", branch = "crusader" }
