[package]
name = "crusader-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crusader-lib = { path = "../crusader-lib" }
crusader-gui-lib = { path = "../crusader-gui-lib" }
env_logger = "0.10.0"
eframe = "0.28.1"
font-kit = "0.14.2"
