[package]
name = "crusader-lib"
version = "0.0.11-udp-spawn"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { version = "0.3.6", default-features = false, features = [
    "ab_glyph",
    "bitmap_backend",
    "line_series",
    "bitmap_encoder",
] }
chrono = "0.4.19"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }
rand = "0.8.5"
parking_lot = "0.12.0"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
futures = "0.3.21"
bytes = "1.1.0"
snap = "1.0.5"
rmp-serde = "1.1.0"
socket2 = "0.4.6"
libc = "0.2"
