[package]
name = "crusader-lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = []
client = ["dep:plotters", "dep:axum", "dep:image", "dep:snap"]

[dependencies]
plotters = { version = "0.3.6", default-features = false, optional = true, features = [
    "ab_glyph",
    "bitmap_backend",
    "line_series",
    "bitmap_encoder",
] }
chrono = "0.4.19"
bincode = "1.3.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.122"
rand = "0.8.5"
parking_lot = "0.12.0"
hostname = "0.4.0"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
futures = "0.3.21"
bytes = "1.1.0"
snap = { version = "1.0.5", optional = true }
rmp-serde = "1.1.0"
socket2 = "0.4.6"
libc = "0.2"
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "ws",
    "tokio",
    "http1",
], default-features = false, optional = true }
image = { version = "0.24.9", optional = true }
