[package]
name = "crusader"
version = "0.1.0"
edition = "2021"

[dependencies]
crusader-lib = { path = "../crusader-lib" }
clap = { version = "4.5.13", features = ["derive", "string"] }
clap-num = "1.1.1"
env_logger = "0.10.0"
anyhow = "1.0.86"
serde_json = { version = "1.0.122", optional = true }

[features]
default = ["client"]
client = ["crusader-lib/client", "dep:serde_json"]
